Added example project

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,29 @@
 /.build
 /Packages
 /*.xcodeproj
+/.DS_Store
+*.xcuserdatad
+.DS_Store
+/SimpleNexus/Resources/.DS_Store
+/SimpleNexus.xcworkspace/xcshareddata/
+/Build/
+/MortgageApp.xcworkspace/xcshareddata/
+
+.idea/*
+fastlane/report.xml
+fastlane/.env
+fastlane/test_output
+scripts/App Accounts - Sheet1.csv
+scripts/app_status.csv
+Pods/*
+App.ipa
+
+.docker/secrets.json
+.docker/secrets.rb
+.docker/target_api.rb
+
+node_modules
+.ruby-gemset
+.ruby-version
+/docs
+Carthage/
